# conv-hip

./: CMakeLists.txt  README.md  build.sh
include/: kernels.hpp  utils.hpp
include/kernels/: 0_naive.hpp  1_tiling.hpp  2_shared.hpp  3_vector.hpp  4_winograd.hpp  5_winograd_shared.hpp  6_winograd_opt.hpp
src/: main.cpp
